Versión 2.0 de la RamaSesión21. Más trabajo con SASS.

--- a/Sesión 21(25-11-2019)/Ejercicio2.html
+++ b/Sesión 21(25-11-2019)/Ejercicio2.html
@@ -13,5 +13,12 @@
         <li>Elemento 1</li>
         <li>Elemento 2</li>
     </ol>
+    <div class="contenedor">
+        <article role="main">Article</article>
+        <aside role="complementary">Aside</aside>
+    </div>
+    <h3>Esto es un h3</h3>
+    <h4>Esto es un h4</h4>
+    <h5>Esto es un h5</h5>
 </body>
 </html>
